# libxml2-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: test.yml
examples/: invalid.xsd  valid.xsd
libxml2_interface/: CMakeLists.txt  test_interface.c  wrapper.h
src/: lib.rs
